--- a/rbac/templates/layout.html
+++ b/rbac/templates/layout.html
@@ -153,14 +153,9 @@
 </div>
 <div class="pg-body">
     <div class="left-menu">
+        {% load my_tags %}
         <div class="menu-body">
-            <div class="static-menu">
-                <a href="/customer/list/" class="active">
-                    <span class="icon-wrap"><i class="fa fa-connectdevelop"></i></span> 客户管理</a>
-                <a href="/payment/list/">
-                    <span class="icon-wrap"><i class="fa fa-code-fork"></i></span> 账单管理</a>
-            </div>
-
+            {% get_menu request %}
         </div>
     </div>
     <div class="right-body">
